Made small fixes to tests